--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -91,6 +91,7 @@
                         },
                         success: function (data) {
                             localStorage.setItem('token', data);
+                            window.location.href = "http://localhost:8080/";
                         },
                     });
                 });
