--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1>MI CUENTA</h1>
-                <p th:text="'Bienvenido de nuevo ' + ${user.persona.name}"></p>
+                <p th:text="'Bienvenido de nuevo ' + ${user.name}"></p>
                 <div class="d-flex flex-row-reverse mt-2 mb-2">
                     <a class="btn btn-pc-economic-dark" th:href="@{/logout}">Cerrar Sesión</a>
                 </div>
@@ -48,7 +48,7 @@
                                     <div class="row">
                                         <div class="col-md-4">
                                             <label>Antiguo Nombre</label>
-                                            <p class="m-2" th:text="${user.persona.name}"></p>
+                                            <p class="m-2" th:text="${user.name}"></p>
                                         </div>
 
                                         <div class="col-md-4">
@@ -123,7 +123,7 @@
                                     <div class="row">
                                         <div class="col-md-4">
                                             <label>Antiguo Email</label>
-                                            <p class="m-2" th:text="${user.persona.email}"></p>
+                                            <p class="m-2" th:text="${user.email}"></p>
                                         </div>
 
                                         <div class="col-md-4">
@@ -198,7 +198,7 @@
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="direcciones"
                          data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <div class="row" th:if="${user.persona.direccions.isEmpty()}">
+                            <div class="row" th:if="${user.direccions.isEmpty()}">
 
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <p>Actualmente no tienes ninguna direccion de envio creada</p>
@@ -211,14 +211,14 @@
                                 </div>
                             </div>
 
-                            <div class="row" th:if="${!user.persona.direccions.isEmpty()}">
+                            <div class="row" th:if="${!user.direccions.isEmpty()}">
 
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <p>Actualmente tienes las siguientes direcciones de envio</p>
                                     <p>Pulse aqui si le interesa añadir alguna!</p>
 
                                     <ul class="list-group list-group-flush w-50">
-                                        <li th:each="direccio : ${user.persona.direccions}" class="list-group-item">
+                                        <li th:each="direccio : ${user.direccions}" class="list-group-item">
                                             <div class="d-flex justify-content-between">
                                                 <span th:text="${direccio.streetandnumber} + ', ' + ${direccio.postalCode} + ', ' + ${direccio.country} + ', ' + ${direccio.province} + ', ' + ${direccio.city}"></span>
                                                 <div>
