--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     </section>
     <section id="productes" class="row mt-5 justify-content-center">
         <h2 class="text-center">Estos son algunos de los productos que te pueden interesar</h2>
-        <div id="articles" class="row mt-4 mb-2 p-1">
+        <div id="articles" class="row mt-4 mb-2 p-1 col-11">
             <div class="col-12 d-flex justify-content-center">
                 <div class="spinner-border text-secondary" role="status" id="loading-wheel">
                     <span class="visually-hidden">Cargando...</span>
@@ -71,8 +71,8 @@
                     });
 
                     // mostrar solo 4 articulos recomendados
-                    if (articulosRecomendados.length > 3) {
-                        articulosRecomendados = articulosRecomendados.slice(0, 3);
+                    if (articulosRecomendados.length > 4) {
+                        articulosRecomendados = articulosRecomendados.slice(0, 4);
                     }
 
                     var imgAux = "";
@@ -88,7 +88,7 @@
                             imgAux = '/img/static/no-photo.png';
                         }
                         $('#articles-recomenats').append(
-                            '<a href="/article/' + prop[0].article.id + '/' + prop[0].id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end border border-0 text-decoration-none card d-flex align-items-center align-self-center">' +
+                            '<a href="/article/' + prop[0].article.id + '/' + prop[0].id + '" class="col-xs-12 col-sm-6 col-lg-3 text-end border text-decoration-none card d-flex align-items-center align-self-center">' +
                             '<img src="' + imgAux + '" style="width:150px; height:150px; object-fit: contain;" alt="img" class="mt-2">' +
                             '<div class="col-12 justify-content-center row">' +
                             '<div><p class="text-start h4 col-12">' + prop[0].article.nom + '</p></div>' +
@@ -132,7 +132,7 @@
 
                 if (prop.esPrincipal === true) {
                     $('#articles').append(
-                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="col-xs-12 mt-1 p-4 col-sm-6 col-lg-3 text-end border border-0 align-items-center text-decoration-none card-deck card align-items-start">' +
+                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="col-xs-12 mt-1 p-4 col-sm-6 col-lg-3 text-end border align-items-center text-decoration-none card-deck card align-items-start">' +
                         '<img src="' + imgAux + '" style="max-height:200px; margin:auto; object-fit: contain;" alt="img" class="card-img-top">' +
                         '<div class="col-12 justify-content-center row">' +
                         '<div id="' + prop.id + '" class="row justify-content-evenly align-items-center  col-12"></div>' +
