feat: minor changes to article

--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -274,6 +274,7 @@
             console.log(tamanoArray);
             $('.card-deck').pagination({
                 perPage: 3,
+                pageSize: 3,
                 dataSource: function (done) {
                     var data = $('.card-deck .card');
                     var result = [];
