fix: fixed article.html not redirecting correctly.

--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -92,7 +92,7 @@
                     },
                     success: function (data) {
                         localStorage.setItem('token', data);
-                        window.location.href = "http://localhost:8080/";
+                        window.location.href = "/";
                     },
                 });
             });
